# prospect-engine

./: .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.kiro/specs/frontend-ux-redesign/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: project-guide.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/data/: basin_benchmarks.json  infrastructure.json  price_scenarios.json
backend/app/engine/: decision_modeler.py  decline_curves.py  defaults.py  models.py  monte_carlo.py  portfolio_optimizer.py  price_models.py  prospect_economics.py  scenario_engine.py  sensitivity.py
backend/scripts/: generate_demo_data.py
backend/tests/: test_decline_curves.py  test_demo_data.py  test_monte_carlo.py  test_portfolio_optimizer.py  test_prospect_economics.py  test_sensitivity.py
backend/tests/fixtures/: expected_single_permian_deterministic.json  expected_single_permian_stochastic.json  portfolio_10_prospects.json  single_prospect_gom_deepwater.json  single_prospect_permian.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.test.ts  App.tsx  demo.test.ts
frontend/src/hooks/: useAnimatedValue.ts  useCommandCenter.ts  useDemoMode.ts  useKeyboardShortcuts.ts  usePortfolioState.ts  useSimulationResults.ts  useUserPreferences.ts  useViewTransition.ts
frontend/src/lib/: api.ts  commandSearch.ts  constants.ts  export.ts  formatters.ts  mapConfig.ts  (+1 more)
(+64 files in other folders)
